图片相对路径

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
   <div class="title">Characters</div>
   <div class="part1">
       <div class="item-box">
-            <img src="/Users/ito/Desktop/JS/myFirstSite/img/gon.jpg" alt="Gon Freecss" class="item-img">
+            <img src="./img/gon.jpg" alt="Gon Freecss" class="item-img">
             <div class="item-des">
                 <span class="item-des-span">Gon Freecss</span>
             </div>
         </div>
         <div class="item-box">
-            <img src="/Users/ito/Desktop/JS/myFirstSite/img/killua.jpg" alt="Killua Zoldyck" class="item-img">
+            <img src="./img/killua.jpg" alt="Killua Zoldyck" class="item-img">
             <div class="item-des">
                 <span class="item-des-span">Killua Zoldyck</span>
             </div>
         </div>
-            <img src="/Users/ito/Desktop/JS/myFirstSite/img/kurapika.jpg" alt="Killua Zoldyck" class="item-img">
+            <img src="./img/kurapika.jpg" alt="Killua Zoldyck" class="item-img">
             <div class="item-des">
                 <span class="item-des-span">Kurapika</span>
             </div>
         </div>
         <div class="item-box">
-            <img src="/Users/ito/Desktop/JS/myFirstSite/img/leorio.jpg" alt="Leorio Paradinight" class="item-img">
+            <img src="./img/leorio.jpg" alt="Leorio Paradinight" class="item-img">
             <div class="item-des">
                 <span class="item-des-span">Leorio Paradinight</span>
             </div>
