day1 Part1 and css color

--- a/index.html
+++ b/index.html
@@ -13,33 +13,51 @@
 
   <div class="main-title">HUNTER×HUNTER</div>
 
-  <div class="title">Characters</div>
+  <div class="title">CHARACTERS</div>
   <div class="part1">
         <div class="item-box">
             <img src="./img/gon.jpg" alt="Gon Freecss" class="item-img">
             <div class="item-des">
-                <span class="item-des-span">Gon Freecss</span>
+                <span class="item-des-span">Gon Freecss<br>
+                    &nbsp&nbsp&nbsp&nbsp 
+                </span>
             </div>
         </div>
         <div class="item-box">
             <img src="./img/killua.jpg" alt="Killua Zoldyck" class="item-img">
             <div class="item-des">
-                <span class="item-des-span">Killua Zoldyck</span>
+                <span class="item-des-span">Killua Zoldyck<br>
+                    &nbsp&nbsp&nbsp&nbsp 
+                </span>
             </div>
         </div>
         <div class="item-box">
             <img src="./img/kurapika.jpg" alt="Killua Zoldyck" class="item-img">
             <div class="item-des">
-                <span class="item-des-span">Kurapika</span>
+                <span class="item-des-span">Kurapika<br>
+                    &nbsp&nbsp&nbsp&nbsp 
+                </span>
             </div>
         </div>
         <div class="item-box">
             <img src="./img/leorio.jpg" alt="Leorio Paradinight" class="item-img">
             <div class="item-des">
-                <span class="item-des-span">Leorio Paradinight</span>
+                <span class="item-des-span">Leorio Paradinight<br>
+                    &nbsp&nbsp&nbsp&nbsp 
+                </span>
             </div>
         </div>
     </div>
+
+    <div class="space"></div>
+
+    <div class="title">AUTHOR</div>
+    <div class="part2">
+
+
+     </div>
+
+
 
   
 
