完成了整个网页的框架，还缺少JS动作，提交的出处和细节排版

--- a/index.html
+++ b/index.html
@@ -112,12 +112,10 @@
             </div>
     </div>
 
-    <!-- 间隙空格调整 -->
-    <div class="space"></div>
-
     <!-- PART3 故事情节简介 -->
     <div class="title">STORY</div>
     <div class="part3">
+        <iframe id="story" src="https://youtu.be/bDUYTr-xmxg"></iframe>
 
 
     <!-- 间隙空格调整 -->
@@ -127,12 +125,43 @@
     <div class="title">CONTACT</div>
     <div class="part4">
 
+    <form action="./img/lll.jpg" id="contact">
+    <table style="font-size:12px;">
+        <tr>
+          <td>NAME</td>
+          <td><input type="text" name=>＊</td>
+        </tr>
+        <tr><td></td><td></td></tr>
+        <tr>
+          <td>AGE</td>
+          <td><input type="text" name=>＊</td>
+        </tr>
+        <tr><td></td><td></td></tr>
+        <tr>
+          <td>E-MAIL</td>
+          <td><input type="text" name=>＊</td>
+        </tr>
+        <tr><td></td><td></td></tr>      
+        <tr valign="top">
+          <td>COMMENTS</td>
+          <td>
+              <textarea style="width: 1080px; height: 160px;" name=>
+              </textarea>
+          </td>
+        </tr>
+    </table>
+      <div style="float:right;">
+        <input type="submit" value="Submit">
+      </div>
+
+
+    </form> 
+ 
 
     <!-- 脚注 版权申明 -->
     <footer>
         <p> ©Copyright from Wikipedia, edit by Yiren</p>
     </footer>
-
     
 
 </div>
@@ -171,8 +200,5 @@ function black(){
         document.getElementById("menuItem").style.color = "#333333";
 }
 
-</script>
-<script>
- 
 </script>
 </html>
